--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Instagram clone",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
-  "author": "Lavell Francis",
+  "author": "Lavell Francis <lavell.francis@hotmail.com>",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
