--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Instagram clone",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon server.js"
   },
   "author": "Lavell Francis <lavell.francis@hotmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
