--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "test": "jest --clearCache && jest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@types/jest": "^29.5.12",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.10",
     "jest-styled-components": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
